# AudioWave

./: .gitignore  Architecture.drawio  Phase 2 submission  README.md  architecture.drawio
Backend/: docker-compose.yml  nginx.conf
Backend/AudioFileService/: AudioFileService.sln  Dockerfile
Backend/AudioFileService/AudioFileService.API/: AudioFileService.API.csproj  AudioFileService.API.http  Program.cs  appsettings.Development.json  appsettings.json
Backend/MetadataService/: Dockerfile  MetadataService.sln
Backend/MetadataService/MetadataService.API/: MetadataService.API.csproj  MetadataService.API.http  Program.cs  appsettings.json
Backend/PlaylistService/: Dockerfile  PlaylistService.sln
Backend/UsersService/: .gitignore  Dockerfile  Program.cs  UsersService.csproj  UsersService.sln  appsettings.Development.json  appsettings.json
Backend/UsersService/Models/: Follow.cs  (+3 more)
Backend/audio_file_service/: Cargo.toml
Backend/audio_file_service/src/: handlers.rs  main.rs  middleware.rs
Desktop/CredentialSecretsApp/: CredentialSecretsApp.sln  FrmLogin.Designer.cs  FrmLogin.cs  FrmMain.Designer.cs  FrmMain.cs  Program.cs
Diagrams/: Activity.drawio  UseCase.drawio  architecture_phase-2.drawio  audio-metadata-database-diagram.drawio  playlists-database-diagram.drawio  registered-user-activity.drawio  sequence.drawio  use-case.drawio  user-activity.drawio  user-database-diagram.drawio
Frontend/audiowave6/: pubspec.yaml
Phase 2 submission/: BRAUDE Presentation Capstone Project 2.pptx
Setup Instructions/: Metadata Create.sql  Scaffolds.txt  Users Create.sql
(+208 files in other folders)
