[package]
name = "audio_file_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
aws-sdk-s3 = "0.22.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenv = "0.15.0"
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "8.1.1"
actix-web-httpauth = "0.7.0"
sanitize-filename = "0.5.0"
